Version 1.5.0
    * development version
    * added delete action in edit context menu on page

Version 1.4.1
    * released 15 March 2013
    * fixed websearchbar not respecting select all on click settings
    * fixed certificates from custom path disappearing on saving preferences
    * fixed showing empty back/forward history menu upon restoring session
    * fixed duplicating current url in history when restoring session
    * fixed instantly showing popup when clicking on back/forward button

Version 1.4.0
    * released 11 March 2013
    * highlighting host in address in locationbar
    * can now be compiled using Qt 5
    * QtWebKit 2.3 new features - caret browsing, animated scrolling
    * added support for FTP listing files and downloading
    * added support for saving passwords of multiple users per site
    * added support for showing tabs on top
    * added bash autocompletion file
    * added more actions to super menu, also show menu inside window
    * possibility to select text on page with Shift+Arrow keys
    * asking user whether to allow site to use notifications/geolocation
    * option to set JavaScript privacy permissions
    * option to specify default search engine used in locationbar
    * option to disable search suggestions in websearchbar
    * option to search only whole words in source viewer
    * option to hide reload/stop buttons in navigationbar
    * option to disable alt/ctrl + numbers shortcuts
    * option to switch to tab from locationbar popup completer
    * option to set where to store network cache
    * use .qupzilla/tmp instead of /tmp for temporary data
    * saving passwords should now work for much more sites
    * don't steal Ctrl+B/U/I shortcuts from page
    * disabled by default opacity effect on tab previews - see BUILDING
    * improved showing navigation toolbar in fullscreen
    * moved config directory into ~/.config/qupzilla
    * certificates bundle is now only used on windows