@@ -927,7 +927,9 @@ void MainApplication::startPrivateBrowsing()
 {
     QStringList args;
     foreach (const QString &arg, arguments()) {
-        if (arg.startsWith(QLatin1Char('-'))) {
+        if (arg.startsWith(QLatin1Char('-')) &&
+                arg != QLatin1String("--private-browsing") &&
+                arg != QLatin1String("-pb")) {
             args.append(arg);
         }
     }
